<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/adapter_patient_ot_viewContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    style="@style/CustomCardView"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginEnd="5dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labour_time"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/secondaryText"/>

                    <TextView
                        android:id="@+id/labour_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textHeading"
                        android:text="@string/empty"
                        android:textSize="@dimen/secondaryText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_time"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/secondaryText"/>
                    <TextView
                        android:id="@+id/delivery_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textHeading"
                        android:text="@string/empty"
                        android:textSize="@dimen/secondaryText" />

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/routine_question"
                            android:textColor="@color/textHeading"
                            android:textSize="@dimen/secondaryText"
                            android:textStyle="bold"
                            android:layout_marginEnd="5dp" />
                        <TextView
                            android:id="@+id/routine_question"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/empty"
                            android:textColor="@color/textHeading"
                            android:textSize="@dimen/secondaryText" />
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general_remark"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/secondaryText"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp" />
                    <TextView
                        android:id="@+id/general_remark"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/empty"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/secondaryText" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>

